# tcc_sara

./: .env  Cargo.toml  README.md  main.rs
frontend/: index.html  login.html  menu.html
frontend/css/: style.css
frontend/js/: api.js
src/: main.rs
src/database/: connection.rs
src/handlers/: mod.rs  user_handler.rs
src/models/: mod.rs  patrimonio.rs  user.rs
src/routes/: patrimonio_routes.rs  user_routes.rs
src/services/: mod.rs  patrimonio_service.rs  user_service.rs
tcc_sara/frontend/: login.html  patrimonio.html
tcc_sara/frontend/css/: style.css
tcc_sara/frontend/js/: auth.js
tcc_sara/src/: main.rs
tcc_sara/src/handlers/: patrimonio_handler.rs  user_handler.rs
tcc_sara/src/models/: user.rs
tcc_sara/src/routes/: mod.rs  user_routes.rs
tcc_sara/src/services/: user_service.rs
