[package]
name = "api_rust"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"